--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
     <meta name="description" content="Дипломная работа Никиты Ивочкина в «Яндекс.Практикуме»">
     <meta name="author" content="Никита Ивочкин">
     <link href="../src/index.css" rel="stylesheet">
-    <title></title>
+    <title>Movies Explorer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
